appId: com.futureatoms.sticker_officer
---
- runFlow: ../utils/navigate_past_onboarding.yaml
- tapOn: "Create"
- waitForAnimationToEnd
- tapOn: "AI Generate"
- waitForAnimationToEnd
- assertVisible: "prompt"
